# digital-library-rust-api

./: Cargo.toml  README.md
src/: main.rs
src/adapters/: mod.rs
src/adapters/repositories/: book_repository.rs  in_memory_repository.rs  mod.rs  user_repository.rs
src/adapters/web/: books_controller.rs  http_config.rs  mod.rs  routes_config.rs  users_controller.rs
src/application/: book_service.rs  dto.rs  mod.rs  user_service.rs
src/domain/: book.rs  errors.rs  mod.rs  traits.rs  user.rs
